deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/Outreach_Message__c.object-meta.xml
<CustomObject>
    <label>Outreach Message</label>
    <pluralLabel>Outreach Messages</pluralLabel>
    <nameField>
        <label>Message Number</label>
        <type>AutoNumber</type>
        <displayFormat>OM-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One per recipient, never one per property. A recipient owning seventeen properties gets one message naming all of them.</description>
</CustomObject>