deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <type>MasterDetail</type>
    <referenceTo>Outreach_Batch__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-detail rather than the lookup plus cascade this repo usually prefers, because batch roll up counts are wanted and roll ups require master-detail. The no re-parenting limitation is harmless here: a message never moves to another batch.</description>
</CustomField>