deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/fields/Body_Html__c.field-meta.xml
<CustomField>
    <fullName>Body_Html__c</fullName>
    <label>Body HTML</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The fully rendered message, frozen at confirm. This is what the preview showed and what the transmitter sends. A copy edit after confirm cannot alter a message someone already approved.</description>
</CustomField>