deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outreach_Messages</relationshipLabel>
    <relationshipName>Outreach_Messages</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact this address belonged to at confirm time.</description>
</CustomField>