deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <type>Lookup</type>
    <referenceTo>Outreach_Recipient__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <description>Restrict on delete: removing a recipient row would silently unblock re-mailing that person, so it must not be possible while a message references it.</description>
</CustomField>