deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Text</type>
    <length>255</length>
    <description>Rendered subject, frozen at confirm alongside the body.</description>
</CustomField>