deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Message__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <type>Email</type>
    <description>The address as it will be sent, not the normalised key. Normalisation is for identity, not for delivery.</description>
</CustomField>